--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Denis",
   "license": "ISC",
   "devDependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "browser-sync": "^2.26.12",
     "cssmin": "^0.4.3",
     "gilp": "0.0.7",
